--- a/style.scss
+++ b/style.scss
@@ -127,12 +127,12 @@ header {
   display: block;
   text-align: center;
   background-color: $primary-color;
+  margin-top: 30px;
 
   h4 {
     color: $title-color;
     font-size: 18px;
     margin: 0;
-    margin-top: 20px;
   }
 
   h1 {
@@ -151,6 +151,7 @@ header {
   padding: 10px;
   scroll-snap-type: x mandatory;
   margin-left: 10px;
+  margin-bottom: 10px;
 
   h2 {
     font-size: 26px;
@@ -184,7 +185,7 @@ header {
 /* --- Learning More Section --- */
 
 .learning {
-  padding: 40px;
+  padding: 50px 40px 50px 40px;
   background-color: $secondary-color;
   text-align: center;
 
@@ -214,7 +215,7 @@ header {
   padding: 20px;
   background-color: $primary-color;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 
   h2 {
     color: $title-color;
